<resources>
    <string name="app_name">GardenPieClient</string>
    <string name="connection_pref_cat_key_str">connection_category</string>
    <string name="connection_pref_cat_title_str">Connection</string>
    <string name="connection_option_pref_key_str">connection</string>
    <string-array name="connection_options_entries">
        <item>Bluetooth</item>
        <item>TCP/IP</item>
    </string-array>
    <string-array name="connection_options_values">
        <item>bluetooth</item>
        <item>tcp/ip</item>
    </string-array>
    <string name="connection_option_default_str">Bluetooth</string>
    <string name="settings_menu_str">Settings</string>
    <string name="garden_pie_title_str">Garden Pie</string>
    <string name="bluetooth_paired_device_key_str">paired_device</string>
    <string name="bluetooth_paired_device_title_str">Available Devices</string>
    <string name="no_connection_warning_str">No Connection</string>
    <string name="no_paired_device_warning_str">No Paired Device</string>

    <string name="go_online_str">GO ONLINE</string>
    <string name="section_name_str">Section</string>
    <string name="days_choose">Choose Days</string>
    <string-array name="days">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
        <item>SUNDAY</item>
    </string-array>
    <string name="empty_time_str">...</string>
    <string name="set_time_str">Set Time</string>
    <string name="max_times_warning_str">Max Times Set Reached...</string>
    <string name="upload_label_str">Upload</string>
    <string name="download_label_str">Download</string>
    <string name="no_weather_data_label_str">no weather data</string>
    <string name="summary_label_str">Summary:</string>
    <string name="temperature_label_str">Temperature:</string>
    <string name="forecast_label_str">Next 48h</string>
    <string name="tommorow_label_str">Tommorow</string>
    <string name="default_location">19.444971,51.779843</string>
</resources>
