<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/connection_pref_cat_title_str"
        android:key="@string/connection_pref_cat_key_str">
        <ListPreference
            android:key="@string/connection_option_pref_key_str"
            android:title="@string/connection_pref_cat_title_str"
            android:dialogTitle="@string/connection_option_pref_key_str"
            android:entries="@array/connection_options_entries"
            android:entryValues="@array/connection_options_values"
            android:defaultValue="@string/connection_option_default_str"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Funcionalities"
        android:key="funcionalities_category">
        <com.steveq.gardenpieclient.settings.presentation.AutoCompleteEditTextPreference
            android:key="location"
            android:title="Set Current Location"
            android:summary="..."
            />

        <EditTextPreference
            android:key="duration"
            android:title="Watering duration [s]"
            android:defaultValue="60"/>
    </PreferenceCategory>
</PreferenceScreen>