<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.steveq.gardenpieclient.sections.presentation.SectionsFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshWeather"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/material_blue_grey_600">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="34sp"
                            android:text="Currently" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            app:srcCompat="@drawable/clear_day" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            android:text="@string/summary_label_str" />

                        <TextView
                            android:id="@+id/currentlySummaryTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            tools:text="Rain" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            android:text="@string/temperature_label_str" />

                        <TextView
                            android:id="@+id/currentlyTemperatureTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            tools:text="24C" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            android:text="Humidity: " />

                        <TextView
                            android:id="@+id/currentlyHumidityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            tools:text="70%" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/material_blue_grey_600">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="34sp"
                            android:text="@string/tommorow_label_str" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            app:srcCompat="@drawable/clear_day" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            android:text="@string/summary_label_str" />

                        <TextView
                            android:id="@+id/forecastSummaryTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            tools:text="Rain" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            android:text="@string/temperature_label_str" />

                        <TextView
                            android:id="@+id/forecastTemperatureTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            tools:text="24C" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            android:text="Humidity: " />

                        <TextView
                            android:id="@+id/forecastHumidityTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:textColor="@color/material_blue_grey_800x"
                            android:textSize="24sp"
                            tools:text="70%" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>
